test/spec_vectors/store/fail/module_52.wat
(module (memory 1) (func (i32.store16 (i32.const 0) (f32.const 0))))